Fixed scrollbar issue
With `margin-block: auto;`, the SVG can be bigger than the scroller and the height
difference gets split as negative margin, so the scroller doesn't show everything.
With this fix, we lose vertical centering, but that's OK.

--- a/css/beadCrochetApp.css
+++ b/css/beadCrochetApp.css
@@ -181,7 +181,7 @@ input[ type="number" ] {
 .beads-svg {
   position: absolute;
   inset: 0;
-  margin: auto;
+  margin-inline: auto;
 }
 
 /* Style specific components by ID  %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% */
